--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -14,6 +14,9 @@
     <title>Daily Result | Baba Ijebu</title>
     <meta name="description" content="Today Premier Lotto Baba Ijebu result">
 
+    <meta http-equiv="refresh" content="0; url=https://premier-lotto-babaijebu-results.visuallottoboard.com/">
+
+
     <meta property="og:title" content="Daily Result | Baba Ijebu">
     <meta property="og:description" content="Today Premier Lotto Baba Ijebu result"> 
     <meta property="og:image" content="https://i.postimg.cc/nzvC41Zw/vlb-day-Result-cover2.png">
@@ -216,6 +219,8 @@
             <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-54JWWN2R"
             height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <!-- End Google Tag Manager (noscript) -->
+
+    <h1 style="font-size: 3.5rem; color: #fff; background-color: #2282c7;" id="visual-lotto-board">We have migrated this site to the new site. You will be redirected automatically</h1>
 
     <header>
         <nav>
@@ -497,5 +502,9 @@
         })();
     </script>
     <!--End of Tawk.to Script-->
+
+    <script>
+        window.location.replace("https://premier-lotto-babaijebu-results.visuallottoboard.com/");
+    </script>
 </body>
 </html>
