redirect all wednesday games

--- a/GAMES/13Vag.html
+++ b/GAMES/13Vag.html
@@ -13,6 +13,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VAG Result | Baba Ijebu</title>
 
+        <meta http-equiv="refresh" content="0; url=https://premier-lotto-babaijebu-results.visuallottoboard.com/games/13vag">
+
+
     <link rel="stylesheet" href="tableStyles.css">
 </head>
 <body>
@@ -4109,5 +4112,10 @@
         </table>
         <span>Vag</span>
     </main>
+
+     <script>
+            window.location.replace("https://premier-lotto-babaijebu-results.visuallottoboard.com/games/13vag");
+
+        </script>
 </body>
 </html>
