--- a/GAMES/14Enugu.html
+++ b/GAMES/14Enugu.html
@@ -14,6 +14,9 @@
 
     <title>Enugu Result | Baba Ijebu</title>
 
+        <meta http-equiv="refresh" content="0; url=https://premier-lotto-babaijebu-results.visuallottoboard.com/games/14enugu">
+
+
     <link rel="stylesheet" href="tableStyles.css">
 </head>
 <body>
@@ -4130,5 +4133,10 @@
         </table>
         <span>Enugu</span>
     </main>
+
+     <script>
+            window.location.replace("https://premier-lotto-babaijebu-results.visuallottoboard.com/games/14enugu");
+
+        </script>
 </body>
 </html>
