--- a/GAMES/15Lucky.html
+++ b/GAMES/15Lucky.html
@@ -13,6 +13,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lucky Result | Baba Ijebu</title>
 
+        <meta http-equiv="refresh" content="0; url=https://premier-lotto-babaijebu-results.visuallottoboard.com/games/15lucky">
+
+
     <link rel="stylesheet" href="tableStyles.css">
 
 </head>
@@ -4131,5 +4134,10 @@
         </table>
         <span>Lucky</span>
     </main>
+
+     <script>
+            window.location.replace("https://premier-lotto-babaijebu-results.visuallottoboard.com/games/15lucky");
+
+        </script>
 </body>
 </html>
