--- a/GAMES/20Midweek.html
+++ b/GAMES/20Midweek.html
@@ -13,6 +13,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MIDWEEK | Baba Ijebu</title>
 
+        <meta http-equiv="refresh" content="0; url=https://premier-lotto-babaijebu-results.visuallottoboard.com/games/20midweek">
+
+
     <link rel="stylesheet" href="tableStyles.css">
 
 </head>
@@ -2112,5 +2115,10 @@
         <span>MIDWEEK</span>
 
     </main>
+
+     <script>
+            window.location.replace("https://premier-lotto-babaijebu-results.visuallottoboard.com/games/20midweek");
+
+        </script>
 </body>
 </html>
