--- a/GAMES/11Tota.html
+++ b/GAMES/11Tota.html
@@ -13,6 +13,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TOTA Result | Baba Ijebu</title>
 
+        <meta http-equiv="refresh" content="0; url=https://premier-lotto-babaijebu-results.visuallottoboard.com/games/11tota">
+
+
     <link rel="stylesheet" href="tableStyles.css">
 
 </head>
@@ -4132,5 +4135,10 @@
         </table>
         <span>Tota</span>
     </main>
+
+     <script>
+            window.location.replace("https://premier-lotto-babaijebu-results.visuallottoboard.com/games/11tota");
+
+        </script>
 </body>
 </html>
