--- a/GAMES/12Mark-II.html
+++ b/GAMES/12Mark-II.html
@@ -13,6 +13,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mark II Result | Baba Ijebu</title>
 
+        <meta http-equiv="refresh" content="0; url=https://premier-lotto-babaijebu-results.visuallottoboard.com/games/12mark-II">
+
+
     <link rel="stylesheet" href="tableStyles.css">
 
     
@@ -4131,5 +4134,10 @@
         </table>
         <span>Mark II</span>
     </main>
+
+     <script>
+            window.location.replace("https://premier-lotto-babaijebu-results.visuallottoboard.com/games/12mark-II");
+
+        </script>
 </body>
 </html>
