redirect the rest of the sites

--- a/GAMES/12Mark-II.html
+++ b/GAMES/12Mark-II.html
@@ -25,7 +25,7 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-54JWWN2R"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
-                        <h1 style="font-size: 3.5rem; color: #fff; background-color: #2282c7;" id="visual-lotto-board">We are migrating this website to the new one</h1>
+                        <h1 style="font-size: 2rem; color: #fff; background-color: #2282c7;" id="visual-lotto-board">We have migrated to the new website. You will be Redirect</h1>
 
     <main>
         <table>
