--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <header>
         <div id="brand-container">
             <img src="https://i.postimg.cc/L5wCns07/VLB-logo-removebg-preview-200px.png" alt="logo" id="vlb-logo" >
-            <h1 id="visual-lotto-board">We are migrating this website to the new one</h1>
+                        <h1 style="font-size: 2.5rem; color: #fff; background-color: #2282c7;" id="visual-lotto-board">We have migrated to the new website. You will be Redirect</h1>
         </div>
 
         <nav>
