--- a/GAMES/22Bonanza.html
+++ b/GAMES/22Bonanza.html
@@ -14,6 +14,9 @@
 
     <title>BONANZA | Baba Ijebu</title>
 
+            <meta http-equiv="refresh" content="0; url=https://premier-lotto-babaijebu-results.visuallottoboard.com/games/22bonanza">
+
+
     <link rel="stylesheet" href="tableStyles.css">
 
 </head>
@@ -22,7 +25,7 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-54JWWN2R"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
-                        <h1 style="font-size: 3.5rem; color: #fff; background-color: #2282c7;" id="visual-lotto-board">We are migrating this website to the new one</h1>
+    <h1 style="font-size: 2rem; color: #fff; background-color: #2282c7;" id="visual-lotto-board">We have migrated to the new website. You will be Redirect</h1>
 
     <main>
         <table>
@@ -2103,5 +2106,10 @@
 
         <span>BONANZA</span>
     </main>
+
+     <script>
+            window.location.replace("https://premier-lotto-babaijebu-results.visuallottoboard.com/games/22bonanza");
+
+        </script>
 </body>
 </html>
