--- a/GAMES/24National.html
+++ b/GAMES/24National.html
@@ -13,6 +13,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>National | Baba Ijebu</title>
 
+            <meta http-equiv="refresh" content="0; url=https://premier-lotto-babaijebu-results.visuallottoboard.com/games/24national">
+
+
     <link rel="stylesheet" href="tableStyles.css">
 
 </head>
@@ -21,7 +24,8 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-54JWWN2R"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
-                        <h1 style="font-size: 3.5rem; color: #fff; background-color: #2282c7;" id="visual-lotto-board">We are migrating this website to the new one</h1>
+    
+    <h1 style="font-size: 2rem; color: #fff; background-color: #2282c7;" id="visual-lotto-board">We have migrated to the new website. You will be Redirect</h1>
 
     <main>
         <table>
@@ -2101,5 +2105,10 @@
         </table>
         <span>NATIONAL</span>
     </main>
+
+     <script>
+            window.location.replace("https://premier-lotto-babaijebu-results.visuallottoboard.com/games/24national");
+
+        </script>
 </body>
 </html>
